// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/unified-share-modal/SharedLinkSection should account for shared link expirations being set 1`] = `
<div>
  <hr
    className="bdl-SharedLinkSection-separator"
  />
  <label>
    <span
      className="label bdl-Label"
    >
      <FormattedMessage
        defaultMessage="Share Link"
        id="boxui.unifiedShare.sharedLinkSectionLabel"
      />
    </span>
  </label>
  <div
    className="shared-link-toggle-row"
  >
    <div
      className="share-toggle-container"
    >
      <Toggle
        isDisabled={false}
        isOn={true}
        label={
          <span>
            <FormattedMessage
              defaultMessage="Shared link is created"
              id="boxui.unifiedShare.linkShareOn"
            />
            <Tooltip
              constrainToScrollParent={false}
              constrainToWindow={true}
              isDisabled={false}
              position="top-center"
              text={
                <FormattedMessage
                  defaultMessage="This link will expire and be inaccessible on {expiration, date, long}."
                  id="boxui.unifiedShare.sharedLinkExpirationTooltip"
                  values={
                    Object {
                      "expiration": 1519404618000000,
                    }
                  }
                />
              }
              theme="default"
            >
              <span
                className="shared-link-expiration-badge"
              >
                <IconClock
                  color="#ed3757"
                />
              </span>
            </Tooltip>
          </span>
        }
        name="toggle"
      />
    </div>
  </div>
  <div
    className="shared-link-field-row"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      onDismiss={[Function]}
      position="middle-right"
      showCloseButton={true}
      theme="callout"
    >
      <TextInputWithCopyButton
        autofocus={false}
        buttonDefaultText={
          <FormattedMessage
            defaultMessage="Copy"
            id="boxui.core.copy"
          />
        }
        buttonProps={Object {}}
        buttonSuccessText={
          <FormattedMessage
            defaultMessage="Copied"
            id="boxui.core.copied"
          />
        }
        className="shared-link-field-container"
        hideOptionalLabel={true}
        label=""
        readOnly={true}
        successStateDuration={3000}
        triggerCopyOnLoad={false}
        type="url"
        value="https://example.com/shared-link"
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-left"
      text={
        <FormattedMessage
          defaultMessage="Send Shared Link"
          id="boxui.unifiedShare.sendSharedLink"
        />
      }
      theme="default"
    >
      <Button
        className="email-shared-link-btn"
        isLoading={false}
        showRadar={false}
        type="button"
      >
        <IconMail />
      </Button>
    </Tooltip>
  </div>
  <div
    className="shared-link-access-row"
  >
    <SharedLinkAccessMenu
      accessLevel="peopleInYourCompany"
      accessLevelsDisabledReason={Object {}}
      allowedAccessLevels={Object {}}
      changeAccessLevel={[Function]}
      enterpriseName="Box"
      itemType="file"
      onDismissTooltip={[Function]}
      tooltipContent={null}
      trackingProps={
        Object {
          "onChangeSharedLinkAccessLevel": undefined,
          "onSharedLinkAccessMenuOpen": undefined,
          "sharedLinkAccessMenuButtonProps": undefined,
        }
      }
    />
    <SharedLinkPermissionMenu
      allowedPermissionLevels={
        Array [
          "canViewOnly",
        ]
      }
      canChangePermissionLevel={true}
      changePermissionLevel={[Function]}
      trackingProps={
        Object {
          "onChangeSharedLinkPermissionLevel": undefined,
          "sharedLinkPermissionsMenuButtonProps": undefined,
        }
      }
    />
  </div>
</div>
`;

exports[`features/unified-share-modal/SharedLinkSection should render a default component when there is a shared link but user lacks permission to toggle off 1`] = `
<div>
  <hr
    className="bdl-SharedLinkSection-separator"
  />
  <label>
    <span
      className="label bdl-Label"
    >
      <FormattedMessage
        defaultMessage="Share Link"
        id="boxui.unifiedShare.sharedLinkSectionLabel"
      />
    </span>
  </label>
  <div
    className="shared-link-toggle-row"
  >
    <Tooltip
      className="usm-disabled-message-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-right"
      text={
        <FormattedMessage
          defaultMessage="You do not have permission to remove the link."
          id="boxui.unifiedShare.removeLinkTooltip"
        />
      }
      theme="default"
    >
      <div
        className="share-toggle-container"
      >
        <Toggle
          isDisabled={true}
          isOn={true}
          label={
            <FormattedMessage
              defaultMessage="Shared link is created"
              id="boxui.unifiedShare.linkShareOn"
            />
          }
          name="toggle"
        />
      </div>
    </Tooltip>
  </div>
  <div
    className="shared-link-field-row"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      onDismiss={[Function]}
      position="middle-right"
      showCloseButton={true}
      theme="callout"
    >
      <TextInputWithCopyButton
        autofocus={false}
        buttonDefaultText={
          <FormattedMessage
            defaultMessage="Copy"
            id="boxui.core.copy"
          />
        }
        buttonProps={Object {}}
        buttonSuccessText={
          <FormattedMessage
            defaultMessage="Copied"
            id="boxui.core.copied"
          />
        }
        className="shared-link-field-container"
        hideOptionalLabel={true}
        label=""
        readOnly={true}
        successStateDuration={3000}
        triggerCopyOnLoad={false}
        type="url"
        value="https://example.com/shared-link"
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-left"
      text={
        <FormattedMessage
          defaultMessage="Send Shared Link"
          id="boxui.unifiedShare.sendSharedLink"
        />
      }
      theme="default"
    >
      <Button
        className="email-shared-link-btn"
        isLoading={false}
        showRadar={false}
        type="button"
      >
        <IconMail />
      </Button>
    </Tooltip>
  </div>
  <div
    className="shared-link-access-row"
  >
    <SharedLinkAccessMenu
      accessLevel="peopleInYourCompany"
      accessLevelsDisabledReason={Object {}}
      allowedAccessLevels={Object {}}
      changeAccessLevel={[Function]}
      enterpriseName="Box"
      itemType="file"
      onDismissTooltip={[Function]}
      tooltipContent={null}
      trackingProps={
        Object {
          "onChangeSharedLinkAccessLevel": undefined,
          "onSharedLinkAccessMenuOpen": undefined,
          "sharedLinkAccessMenuButtonProps": undefined,
        }
      }
    />
    <SharedLinkPermissionMenu
      allowedPermissionLevels={Array []}
      canChangePermissionLevel={false}
      changePermissionLevel={[Function]}
      trackingProps={
        Object {
          "onChangeSharedLinkPermissionLevel": undefined,
          "sharedLinkPermissionsMenuButtonProps": undefined,
        }
      }
    />
  </div>
</div>
`;

exports[`features/unified-share-modal/SharedLinkSection should render default component with no sharedLink 1`] = `
<div>
  <hr
    className="bdl-SharedLinkSection-separator"
  />
  <label>
    <span
      className="label bdl-Label"
    >
      <FormattedMessage
        defaultMessage="Share Link"
        id="boxui.unifiedShare.sharedLinkSectionLabel"
      />
    </span>
  </label>
  <div
    className="shared-link-toggle-row"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-right"
      text={
        <FormattedMessage
          defaultMessage="Create and copy link for sharing"
          id="boxui.unifiedShare.sharedLinkDisabledTooltipCopy"
        />
      }
      theme="default"
    >
      <div
        className="share-toggle-container"
      >
        <Toggle
          isDisabled={false}
          isOn={false}
          label={
            <FormattedMessage
              defaultMessage="Create shared link"
              id="boxui.unifiedShare.linkShareOff"
            />
          }
          name="toggle"
        />
      </div>
    </Tooltip>
  </div>
</div>
`;

exports[`features/unified-share-modal/SharedLinkSection should render default component with shared link 1`] = `
<div>
  <hr
    className="bdl-SharedLinkSection-separator"
  />
  <label>
    <span
      className="label bdl-Label"
    >
      <FormattedMessage
        defaultMessage="Share Link"
        id="boxui.unifiedShare.sharedLinkSectionLabel"
      />
    </span>
  </label>
  <div
    className="shared-link-toggle-row"
  >
    <div
      className="share-toggle-container"
    >
      <Toggle
        isDisabled={false}
        isOn={true}
        label={
          <FormattedMessage
            defaultMessage="Shared link is created"
            id="boxui.unifiedShare.linkShareOn"
          />
        }
        name="toggle"
      />
    </div>
  </div>
  <div
    className="shared-link-field-row"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      onDismiss={[Function]}
      position="middle-right"
      showCloseButton={true}
      theme="callout"
    >
      <TextInputWithCopyButton
        autofocus={false}
        buttonDefaultText={
          <FormattedMessage
            defaultMessage="Copy"
            id="boxui.core.copy"
          />
        }
        buttonProps={Object {}}
        buttonSuccessText={
          <FormattedMessage
            defaultMessage="Copied"
            id="boxui.core.copied"
          />
        }
        className="shared-link-field-container"
        hideOptionalLabel={true}
        label=""
        readOnly={true}
        successStateDuration={3000}
        triggerCopyOnLoad={false}
        type="url"
        value="https://example.com/shared-link"
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-left"
      text={
        <FormattedMessage
          defaultMessage="Send Shared Link"
          id="boxui.unifiedShare.sendSharedLink"
        />
      }
      theme="default"
    >
      <Button
        className="email-shared-link-btn"
        isLoading={false}
        showRadar={false}
        type="button"
      >
        <IconMail />
      </Button>
    </Tooltip>
  </div>
  <div
    className="shared-link-access-row"
  >
    <SharedLinkAccessMenu
      accessLevel="peopleInYourCompany"
      accessLevelsDisabledReason={Object {}}
      allowedAccessLevels={Object {}}
      changeAccessLevel={[Function]}
      enterpriseName="Box"
      itemType="file"
      onDismissTooltip={[Function]}
      tooltipContent={null}
      trackingProps={
        Object {
          "onChangeSharedLinkAccessLevel": undefined,
          "onSharedLinkAccessMenuOpen": undefined,
          "sharedLinkAccessMenuButtonProps": undefined,
        }
      }
    />
    <SharedLinkPermissionMenu
      allowedPermissionLevels={
        Array [
          "canViewOnly",
        ]
      }
      canChangePermissionLevel={true}
      changePermissionLevel={[Function]}
      trackingProps={
        Object {
          "onChangeSharedLinkPermissionLevel": undefined,
          "sharedLinkPermissionsMenuButtonProps": undefined,
        }
      }
    />
  </div>
</div>
`;

exports[`features/unified-share-modal/SharedLinkSection should render default components with proper tooltip state while submitting request 1`] = `
<div>
  <hr
    className="bdl-SharedLinkSection-separator"
  />
  <label>
    <span
      className="label bdl-Label"
    >
      <FormattedMessage
        defaultMessage="Share Link"
        id="boxui.unifiedShare.sharedLinkSectionLabel"
      />
    </span>
  </label>
  <div
    className="shared-link-toggle-row"
  >
    <div
      className="share-toggle-container"
    >
      <Toggle
        isDisabled={true}
        isOn={false}
        label={
          <FormattedMessage
            defaultMessage="Create shared link"
            id="boxui.unifiedShare.linkShareOff"
          />
        }
        name="toggle"
      />
    </div>
  </div>
</div>
`;

exports[`features/unified-share-modal/SharedLinkSection should render disabled create shared link message when item share is false and url is empty 1`] = `
<Tooltip
  className="usm-disabled-message-tooltip"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  position="top-right"
  text={
    <FormattedMessage
      defaultMessage="You do not have permission to create the link."
      id="boxui.unifiedShare.disabledCreateLinkTooltip"
    />
  }
  theme="default"
>
  <div
    className="share-toggle-container"
  >
    <Toggle
      isDisabled={true}
      isOn={false}
      label={
        <FormattedMessage
          defaultMessage="Create shared link"
          id="boxui.unifiedShare.linkShareOff"
        />
      }
      name="toggle"
    />
  </div>
</Tooltip>
`;

exports[`features/unified-share-modal/SharedLinkSection should render disabled remove shared link message when url is not empty and canChangeAccessLevel is false 1`] = `
<Tooltip
  className="usm-disabled-message-tooltip"
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  position="top-right"
  text={
    <FormattedMessage
      defaultMessage="You do not have permission to remove the link."
      id="boxui.unifiedShare.removeLinkTooltip"
    />
  }
  theme="default"
>
  <div
    className="share-toggle-container"
  >
    <Toggle
      isDisabled={true}
      isOn={true}
      label={
        <FormattedMessage
          defaultMessage="Shared link is created"
          id="boxui.unifiedShare.linkShareOn"
        />
      }
      name="toggle"
    />
  </div>
</Tooltip>
`;

exports[`features/unified-share-modal/SharedLinkSection should render proper dropdown override when viewing an editable box note 1`] = `
<div>
  <hr
    className="bdl-SharedLinkSection-separator"
  />
  <label>
    <span
      className="label bdl-Label"
    >
      <FormattedMessage
        defaultMessage="Share Link"
        id="boxui.unifiedShare.sharedLinkSectionLabel"
      />
    </span>
  </label>
  <div
    className="shared-link-toggle-row"
  >
    <Tooltip
      className="usm-disabled-message-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-right"
      text={
        <FormattedMessage
          defaultMessage="You do not have permission to remove the link."
          id="boxui.unifiedShare.removeLinkTooltip"
        />
      }
      theme="default"
    >
      <div
        className="share-toggle-container"
      >
        <Toggle
          isDisabled={true}
          isOn={true}
          label={
            <FormattedMessage
              defaultMessage="Shared link is created"
              id="boxui.unifiedShare.linkShareOn"
            />
          }
          name="toggle"
        />
      </div>
    </Tooltip>
  </div>
  <div
    className="shared-link-field-row"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      onDismiss={[Function]}
      position="middle-right"
      showCloseButton={true}
      theme="callout"
    >
      <TextInputWithCopyButton
        autofocus={false}
        buttonDefaultText={
          <FormattedMessage
            defaultMessage="Copy"
            id="boxui.core.copy"
          />
        }
        buttonProps={Object {}}
        buttonSuccessText={
          <FormattedMessage
            defaultMessage="Copied"
            id="boxui.core.copied"
          />
        }
        className="shared-link-field-container"
        hideOptionalLabel={true}
        label=""
        readOnly={true}
        successStateDuration={3000}
        triggerCopyOnLoad={false}
        type="url"
        value="http://example.com/s/abc"
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-left"
      text={
        <FormattedMessage
          defaultMessage="Send Shared Link"
          id="boxui.unifiedShare.sendSharedLink"
        />
      }
      theme="default"
    >
      <Button
        className="email-shared-link-btn"
        isLoading={false}
        showRadar={false}
        type="button"
      >
        <IconMail />
      </Button>
    </Tooltip>
  </div>
  <div
    className="shared-link-access-row"
  >
    <SharedLinkAccessMenu
      accessLevelsDisabledReason={Object {}}
      allowedAccessLevels={Object {}}
      changeAccessLevel={[Function]}
      itemType="file"
      onDismissTooltip={[Function]}
      tooltipContent={null}
      trackingProps={
        Object {
          "onChangeSharedLinkAccessLevel": undefined,
          "onSharedLinkAccessMenuOpen": undefined,
          "sharedLinkAccessMenuButtonProps": undefined,
        }
      }
    />
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-center"
      text={
        <FormattedMessage
          defaultMessage="This permission can only be changed in Box Notes"
          id="boxui.unifiedShare.sharedLinkPermissionsEditTooltip"
        />
      }
      theme="default"
    >
      <PlainButton
        className="can-edit-btn"
        isDisabled={true}
      >
        <FormattedMessage
          defaultMessage="Can edit"
          id="boxui.unifiedShare.sharedLinkPermissionsEdit"
        />
      </PlainButton>
    </Tooltip>
  </div>
</div>
`;

exports[`features/unified-share-modal/SharedLinkSection should render proper list of permission options based on the the download setting availability 1`] = `
<div>
  <hr
    className="bdl-SharedLinkSection-separator"
  />
  <label>
    <span
      className="label bdl-Label"
    >
      <FormattedMessage
        defaultMessage="Share Link"
        id="boxui.unifiedShare.sharedLinkSectionLabel"
      />
    </span>
  </label>
  <div
    className="shared-link-toggle-row"
  >
    <div
      className="share-toggle-container"
    >
      <Toggle
        isDisabled={false}
        isOn={true}
        label={
          <FormattedMessage
            defaultMessage="Shared link is created"
            id="boxui.unifiedShare.linkShareOn"
          />
        }
        name="toggle"
      />
    </div>
  </div>
  <div
    className="shared-link-field-row"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      onDismiss={[Function]}
      position="middle-right"
      showCloseButton={true}
      theme="callout"
    >
      <TextInputWithCopyButton
        autofocus={false}
        buttonDefaultText={
          <FormattedMessage
            defaultMessage="Copy"
            id="boxui.core.copy"
          />
        }
        buttonProps={Object {}}
        buttonSuccessText={
          <FormattedMessage
            defaultMessage="Copied"
            id="boxui.core.copied"
          />
        }
        className="shared-link-field-container"
        hideOptionalLabel={true}
        label=""
        readOnly={true}
        successStateDuration={3000}
        triggerCopyOnLoad={false}
        type="url"
        value="https://example.com/shared-link"
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-left"
      text={
        <FormattedMessage
          defaultMessage="Send Shared Link"
          id="boxui.unifiedShare.sendSharedLink"
        />
      }
      theme="default"
    >
      <Button
        className="email-shared-link-btn"
        isLoading={false}
        showRadar={false}
        type="button"
      >
        <IconMail />
      </Button>
    </Tooltip>
  </div>
  <div
    className="shared-link-access-row"
  >
    <SharedLinkAccessMenu
      accessLevel="peopleInYourCompany"
      accessLevelsDisabledReason={Object {}}
      allowedAccessLevels={Object {}}
      changeAccessLevel={[Function]}
      enterpriseName="Box"
      itemType="file"
      onDismissTooltip={[Function]}
      tooltipContent={null}
      trackingProps={
        Object {
          "onChangeSharedLinkAccessLevel": undefined,
          "onSharedLinkAccessMenuOpen": undefined,
          "sharedLinkAccessMenuButtonProps": undefined,
        }
      }
    />
    <SharedLinkPermissionMenu
      allowedPermissionLevels={
        Array [
          "canViewDownload",
          "canViewOnly",
        ]
      }
      canChangePermissionLevel={true}
      changePermissionLevel={[Function]}
      trackingProps={
        Object {
          "onChangeSharedLinkPermissionLevel": undefined,
          "sharedLinkPermissionsMenuButtonProps": undefined,
        }
      }
    />
  </div>
</div>
`;

exports[`features/unified-share-modal/SharedLinkSection should render proper list of permission options based on the the download setting availability 2`] = `
<div>
  <hr
    className="bdl-SharedLinkSection-separator"
  />
  <label>
    <span
      className="label bdl-Label"
    >
      <FormattedMessage
        defaultMessage="Share Link"
        id="boxui.unifiedShare.sharedLinkSectionLabel"
      />
    </span>
  </label>
  <div
    className="shared-link-toggle-row"
  >
    <div
      className="share-toggle-container"
    >
      <Toggle
        isDisabled={false}
        isOn={true}
        label={
          <FormattedMessage
            defaultMessage="Shared link is created"
            id="boxui.unifiedShare.linkShareOn"
          />
        }
        name="toggle"
      />
    </div>
  </div>
  <div
    className="shared-link-field-row"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      onDismiss={[Function]}
      position="middle-right"
      showCloseButton={true}
      theme="callout"
    >
      <TextInputWithCopyButton
        autofocus={false}
        buttonDefaultText={
          <FormattedMessage
            defaultMessage="Copy"
            id="boxui.core.copy"
          />
        }
        buttonProps={Object {}}
        buttonSuccessText={
          <FormattedMessage
            defaultMessage="Copied"
            id="boxui.core.copied"
          />
        }
        className="shared-link-field-container"
        hideOptionalLabel={true}
        label=""
        readOnly={true}
        successStateDuration={3000}
        triggerCopyOnLoad={false}
        type="url"
        value="https://example.com/shared-link"
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-left"
      text={
        <FormattedMessage
          defaultMessage="Send Shared Link"
          id="boxui.unifiedShare.sendSharedLink"
        />
      }
      theme="default"
    >
      <Button
        className="email-shared-link-btn"
        isLoading={false}
        showRadar={false}
        type="button"
      >
        <IconMail />
      </Button>
    </Tooltip>
  </div>
  <div
    className="shared-link-access-row"
  >
    <SharedLinkAccessMenu
      accessLevel="peopleInYourCompany"
      accessLevelsDisabledReason={Object {}}
      allowedAccessLevels={Object {}}
      changeAccessLevel={[Function]}
      enterpriseName="Box"
      itemType="file"
      onDismissTooltip={[Function]}
      tooltipContent={null}
      trackingProps={
        Object {
          "onChangeSharedLinkAccessLevel": undefined,
          "onSharedLinkAccessMenuOpen": undefined,
          "sharedLinkAccessMenuButtonProps": undefined,
        }
      }
    />
    <SharedLinkPermissionMenu
      allowedPermissionLevels={
        Array [
          "canViewOnly",
        ]
      }
      canChangePermissionLevel={true}
      changePermissionLevel={[Function]}
      trackingProps={
        Object {
          "onChangeSharedLinkPermissionLevel": undefined,
          "sharedLinkPermissionsMenuButtonProps": undefined,
        }
      }
    />
  </div>
</div>
`;

exports[`features/unified-share-modal/SharedLinkSection should render settings link when handler is provided and shared link is enabled 1`] = `
<PlainButton
  className="shared-link-settings-btn"
  data-resin-target="settings"
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  type="button"
>
  <FormattedMessage
    defaultMessage="Link Settings"
    id="boxui.unifiedShare.sharedLinkSettings"
  />
</PlainButton>
`;

exports[`features/unified-share-modal/SharedLinkSection should render without SharedLinkPermissionMenu if access level is "people in item" 1`] = `
<div>
  <hr
    className="bdl-SharedLinkSection-separator"
  />
  <label>
    <span
      className="label bdl-Label"
    >
      <FormattedMessage
        defaultMessage="Share Link"
        id="boxui.unifiedShare.sharedLinkSectionLabel"
      />
    </span>
  </label>
  <div
    className="shared-link-toggle-row"
  >
    <div
      className="share-toggle-container"
    >
      <Toggle
        isDisabled={false}
        isOn={true}
        label={
          <FormattedMessage
            defaultMessage="Shared link is created"
            id="boxui.unifiedShare.linkShareOn"
          />
        }
        name="toggle"
      />
    </div>
  </div>
  <div
    className="shared-link-field-row"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      onDismiss={[Function]}
      position="middle-right"
      showCloseButton={true}
      theme="callout"
    >
      <TextInputWithCopyButton
        autofocus={false}
        buttonDefaultText={
          <FormattedMessage
            defaultMessage="Copy"
            id="boxui.core.copy"
          />
        }
        buttonProps={Object {}}
        buttonSuccessText={
          <FormattedMessage
            defaultMessage="Copied"
            id="boxui.core.copied"
          />
        }
        className="shared-link-field-container"
        hideOptionalLabel={true}
        label=""
        readOnly={true}
        successStateDuration={3000}
        triggerCopyOnLoad={false}
        type="url"
        value="https://example.com/shared-link"
      />
    </Tooltip>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="top-left"
      text={
        <FormattedMessage
          defaultMessage="Send Shared Link"
          id="boxui.unifiedShare.sendSharedLink"
        />
      }
      theme="default"
    >
      <Button
        className="email-shared-link-btn"
        isLoading={false}
        showRadar={false}
        type="button"
      >
        <IconMail />
      </Button>
    </Tooltip>
  </div>
  <div
    className="shared-link-access-row"
  >
    <SharedLinkAccessMenu
      accessLevel="peopleInThisItem"
      accessLevelsDisabledReason={Object {}}
      allowedAccessLevels={Object {}}
      changeAccessLevel={[Function]}
      enterpriseName="Box"
      itemType="file"
      onDismissTooltip={[Function]}
      tooltipContent={null}
      trackingProps={
        Object {
          "onChangeSharedLinkAccessLevel": undefined,
          "onSharedLinkAccessMenuOpen": undefined,
          "sharedLinkAccessMenuButtonProps": undefined,
        }
      }
    />
  </div>
</div>
`;
